--- a/style.css
+++ b/style.css
@@ -1,105 +1,225 @@
 @charset "UTF-8";
 /* CSS Document */
-/* Style for the Sidebar */
-      .sidebar {
-        height: 100%;
-        width: 200px;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        background-color: #555;
-        overflow-x: hidden;
-        padding-top: 16px;
-        display: none;
-
-      }
-
-      /* Style for the Sidebar Links */
-      .sidebar a {
-        padding: 6px 8px 6px 16px;
-        text-decoration: none;
-        font-size: 20px;
-        color: #818181;
-        display: block;
-		  transition: transform 0.5s ease-in-out;
-      }
-
-      /* Style for the Active Link */
-      .sidebar a.active {
-        color: #fff;
-        background-color: #4CAF50;
-      }
-
-      /* Style for the Sidebar Links on Hover */
-      .sidebar a:hover:not(.active) {
-        color: #fff;
-        background-color: #777;
-      }
 
       /* Style for the Main Content */
       .main {
         margin-left: 0;
-        padding: 1px 16px;
+        padding: 40px 100px;
+		  padding-left: 200px;
+		  padding-top: 10px;
         height: 100%;
         transition: margin-left 0.5s;
       }
 
+.main img{
+	width: 100%;
+}
+
+.filters{
+	margin-top: 30px;margin-left: 200px;margin-bottom: 20px
+}
       /* Style for the Images */
       .images {
-        display: flex;
+		   
+		  display:grid;
+		  grid-template-columns: repeat(auto-fit,  minmax(150px, 1fr) );
+		  grid-auto-rows: 150px;
+		  grid-gap:20px;
+        /*display: flex;
         flex-wrap: wrap;
         justify-content: center;
+		 align-content: flex-start;*/
       }
 
-      .images img {
-        width: 30%;
-        height: auto;
+.work-images{
+	display:grid;
+		  grid-template-columns: repeat(auto-fit,  minmax(150px, 1fr) );
+		  grid-auto-rows: 150px;
+		  grid-gap:20px;
+}
+
+
+
+
+.project-card{
+	display:flex;
+			  justify-content: center;
+			  align-items:center;
+			  width:100%;
+			  height: 100%;
+			  font-size:30px;
+			  overflow:hidden;
+			  
+	border-radius: 5px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+
+		.wide{
+        	grid-column: auto;
+			background: black;
+				
+		}
+
+		.tall{
+        	grid-row: auto;
+		}
+
+		.big{
+			grid-column: auto;
+			grid-row:auto;
+		}
+
+       .images img {
         margin: 10px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  		object-fit: cover;
+        width: auto;
         border-radius: 5px;
         cursor: pointer;
         transition: all 0.3s;
+		   width: 120%;
+		
       }
+/*
+height:100%; 
+		width:100%;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 
       .images img:hover {
-        opacity: 0.7;
+        opacity: 0.3;
+		  text-align: center;
+
       }
 
-      .images h3 {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 20px;
-        color: white;
-        text-align: center;
+
+.gallery {
+        display: flex;
+        flex-wrap: wrap;
+      }
+  .gallery-item {
+	width: 25%;
+	padding: 10px;
+	  padding-left: 0;
+    cursor: pointer;
+  }
+      @media (max-width: 768px) {
+        .gallery-item {
+          width: 50%;
+        }
+		  
       }
 
-      /* Responsive Design for Small Screens */
-      @media screen and (max-width: 700px) {
-        .sidebar {
-          width: 100%;
-          height: auto;
-          position: relative;
-          display: none;
-        }
-        .sidebar a {
-          float: left;
-        }
-        .main {
-          margin-left: 0;
-        }
-        .images {
-          display: block;
-        }
-        .images img {
-          width: 80%;
-          height: auto;
-          margin: 10px auto;
-        }
+      img {
+        width: 100%;
+        height: auto;
       }
-		
-	.dropdown-content {
-	padding-left: 20px;
+
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+	height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 999;
+  align-items: center;
+  justify-content: center;
+	padding-left: 200px;
+	padding-top: 100px;
+	display: none;
+}
+
+.overlay img {
+	align-items: center;
+	 justify-content: center;
+  width: auto;
+  max-height: 80%;
+  animation: expand 0.2s ease-out;
+	border-radius: 5px;
+}
+
+@keyframes expand {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+
+      /* Media Query Start for Mobile phones */
+		@media (min-width:540px){
+		  .container{
+			margin:30px;
+			grid-template-columns: repeat(auto-fit,  minmax(150px, 1fr) );
+			grid-auto-rows: 150px;
+			grid-auto-flow:dense;
+			grid-gap:10px;
+		  }
+	  .wide{
+		grid-column: span 2;
+	  }
+	  .tall{
+		grid-row: span 4;
+	  }
+	  .big{
+		grid-column: span 2;
+		grid-row:span 2;
+	  }
+			
 	}
+	@media (max-width:400px){
+	  .container{
+		grid-template-columns: repeat(auto-fit,  minmax(300px, 1fr) );
+	  }
+	}
+		
+.radius{
+	border-radius: 10px;
+}
+
+.filter-btn {
+  background-color: white;
+  color: black;
+  border: 1px solid #ABDC13;
+  border-radius: 5px;
+  padding: 5px 10px;
+  text-align: center;
+  cursor: pointer;
+  margin: 5px;
+  transition: all 0.3s;
+}
+
+.filter-button.selected {
+  background-color: orange;
+  color: white;
+}
+
+#returnBtn{
+  position:fixed; 
+		right: 0; 
+		top:10px;
+		z-index: 999;
+		  border: none; /* remove border */
+		  animation-name: slideInBtn;
+		  animation-duration: 0.5s;
+		  animation-fill-mode: forwards;
+      cursor: pointer;
+}
+
+.responsive-container {
+  position: relative;
+  padding-bottom: 56.25%; /* This value is the aspect ratio of the iframe, which is 16:9 */
+  overflow: hidden;
+	width: auto;
+}
+.responsive-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
