--- a/sidebar.css
+++ b/sidebar.css
@@ -96,7 +96,7 @@ display: block;
 		left:15px; 
 		top:10px;
 		z-index: 999;
-		  background-image: url("../LeileiXia.gif");
+		  background-image: url("https://cdn.discordapp.com/attachments/1069671537440985140/1069671570378862622/Untitled_Artwork.gif");
 		  background-size: cover; /* or contain */
 		  width: 120px; /* adjust width to match the gif size */
 		  height: 80px; /* adjust height to match the gif size */
