--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 
 
       /* Media Query Start for Mobile phones */
-		@media (min-width:540px){
+@media (min-width:540px){
 		  .container{
 			margin:30px;
 			grid-template-columns: repeat(auto-fit,  minmax(150px, 1fr) );
@@ -171,7 +171,7 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
 	  }
 			
 	}
-	@media (max-width:400px){
+@media (max-width:400px){
 	  .container{
 		grid-template-columns: repeat(auto-fit,  minmax(300px, 1fr) );
 	  }
@@ -222,4 +222,13 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+@media only screen and (max-width : 667px) {
+	.main{
+		font-size:16px;
+	}
+	.sidebar{
+		font-size: 16px;
+	}
 }
